--- a/contacts.html
+++ b/contacts.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SSIGPRO - Statistical Signal Processing Group</title>
-  <meta name="description" content="SSIGPRO e il gruppo di ricerca su elaborazione statistica di dati e segnali, machine learning e inferenza a supporto delle decisioni.">
+  <title>SSIGPRO - Contatti</title>
+  <meta name="description" content="Contatti SSIGPRO e riferimenti del dipartimento DEI.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&family=Newsreader:opsz,wght@6..72,500;6..72,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <script defer src="lang.js"></script>
 </head>
-<body data-page="home">
+<body data-page="contacts">
   <header class="site-header">
     <div class="container nav-wrap">
-      <a class="brand active" href="index.html">
+      <a class="brand" href="index.html">
         <img src="logo.jpg" alt="SSIGPRO logo" class="brand-logo">
         <span>SSIGPRO</span>
       </a>
@@ -22,7 +22,7 @@
         <nav>
           <a href="research.html" data-i18n="nav_research">Ricerca</a>
           <a href="team.html" data-i18n="nav_team">Team</a>
-          <a href="contacts.html" data-i18n="nav_contacts">Contatti</a>
+          <a href="contacts.html" class="active" data-i18n="nav_contacts">Contatti</a>
         </nav>
         <div class="lang-switch" aria-label="Language selector">
           <button type="button" class="lang-btn active" data-lang="it" aria-pressed="true">IT</button>
@@ -33,27 +33,22 @@
   </header>
 
   <main>
-    <section class="hero hero-only">
-      <div class="container hero-grid">
+    <section class="section section-tinted page-section">
+      <div class="container two-col">
         <div>
-          <h1 data-i18n="hero_title">Statistical Signal Processing Group</h1>
-          <p class="lead" data-i18n="hero_lead">
-            SSIGPRO studia modelli e algoritmi per estrarre informazione da dati complessi: inferenza statistica, machine learning, teoria dei segnali e decision making.
+          <h2 data-i18n="contacts_title">Contatti</h2>
+          <p data-i18n="contacts_dept">
+            Dipartimento di Ingegneria dell'Energia Elettrica e dell'Informazione "Guglielmo Marconi" (DEI), Universita di Bologna.
           </p>
+          <p data-i18n="contacts_addr">Viale del Risorgimento 2, 40136 Bologna, Italia</p>
         </div>
-        <aside class="hero-card">
-          <div class="hero-partners">
-            <img src="logo_unibo.png" alt="Logo Universita di Bologna" class="partner-logo unibo-logo">
-            <img src="logo_polito.svg" alt="Logo Politecnico di Torino" class="partner-logo polito-logo">
-          </div>
-          <h2 data-i18n="focus_title">Focus</h2>
-          <ul>
-            <li data-i18n="focus_1">Signal and data processing</li>
-            <li data-i18n="focus_2">Statistical learning and inference</li>
-            <li data-i18n="focus_3">Modeling for AI-enabled systems</li>
-            <li data-i18n="focus_4">Optimization and decision support</li>
+        <div class="panel">
+          <h3 data-i18n="online_refs_title">Riferimenti online</h3>
+          <ul class="link-list">
+            <li><a href="https://dei.unibo.it/it/ricerca/gruppi-di-ricerca/elaborazione-statistica-dati-segnali-ssigpro" target="_blank" rel="noopener noreferrer" data-i18n="ssigpro_page">Pagina gruppo SSIGPRO (DEI)</a></li>
+            <li><a href="https://www.unibo.it" target="_blank" rel="noopener noreferrer" data-i18n="unibo_portal">Portale Universita di Bologna</a></li>
           </ul>
-        </aside>
+        </div>
       </div>
     </section>
   </main>
