moved the logos

--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
           </p>
         </div>
         <aside class="hero-card">
-          <div class="hero-partners">
-            <img src="logo_unibo.png" alt="Logo Universita di Bologna" class="partner-logo unibo-logo">
-            <img src="logo_polito.svg" alt="Logo Politecnico di Torino" class="partner-logo polito-logo">
+          <div class="hero-logo-stack">
+            <img src="logo.jpg" alt="SSIGPRO logo" class="hero-ssigpro-logo">
+            <div class="hero-partners">
+              <img src="logo_unibo.png" alt="Logo Universita di Bologna" class="partner-logo unibo-logo">
+              <img src="logo_polito.svg" alt="Logo Politecnico di Torino" class="partner-logo polito-logo">
+            </div>
           </div>
           <h2 data-i18n="focus_title">Focus</h2>
           <ul>
