done some restoring

--- a/research.html
+++ b/research.html
@@ -35,6 +35,9 @@
     <section class="section section-tinted page-section">
       <div class="container">
         <h2 data-i18n="research_title">Linee di ricerca</h2>
+        <p class="section-intro" data-i18n="research_intro">
+          Il gruppo SSIGPRO sviluppa metodi teorici e algoritmici per estrarre informazione affidabile da dati e segnali complessi.
+        </p>
         <div class="cards">
           <article class="card">
             <h3 data-i18n="r1_title">Elaborazione Statistica di Dati e Segnali</h3>
@@ -53,6 +56,9 @@
             <p data-i18n="r4_text">Sviluppo teorico con applicazioni in elettronica, telecom e tecnologie data-driven.</p>
           </article>
         </div>
+        <p class="section-intro" data-i18n="research_note">
+          Le linee di ricerca combinano modellazione matematica, validazione sperimentale e trasferimento verso applicazioni reali.
+        </p>
       </div>
     </section>
   </main>
