--- a/team.html
+++ b/team.html
@@ -40,19 +40,25 @@
           <article class="person">
             <h3>Riccardo Rovatti</h3>
             <p data-i18n="aff_unibo">Universita di Bologna</p>
+            <p data-i18n="role_rovatti">Professore ordinario - Coordinamento scientifico</p>
             <a href="https://www.unibo.it/sitoweb/riccardo.rovatti" target="_blank" rel="noopener noreferrer" data-i18n="profile_link">Profilo personale</a>
           </article>
           <article class="person">
             <h3>Mauro Mangia</h3>
             <p data-i18n="aff_unibo">Universita di Bologna</p>
+            <p data-i18n="role_mangia">Ricercatore - Metodi di machine learning e inferenza</p>
             <a href="https://www.unibo.it/sitoweb/mauro.mangia" target="_blank" rel="noopener noreferrer" data-i18n="profile_link">Profilo personale</a>
           </article>
           <article class="person">
             <h3>Gianluca Setti</h3>
             <p data-i18n="aff_polito">Politecnico di Torino</p>
+            <p data-i18n="role_setti">Professore ordinario - Collaborazioni e applicazioni</p>
             <a href="https://www.polito.it/personale?p=gianluca.setti" target="_blank" rel="noopener noreferrer" data-i18n="profile_link">Profilo personale</a>
           </article>
         </div>
+        <p class="section-intro" data-i18n="team_note">
+          Il gruppo include docenti, ricercatori e collaboratori impegnati su temi teorici e applicativi dell'elaborazione statistica dei segnali.
+        </p>
       </div>
     </section>
   </main>
